--- a/ft-support/pom.xml
+++ b/ft-support/pom.xml
@@ -8,15 +8,13 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ft-support</artifactId>
     <packaging>jar</packaging>
-    <name>Maven Quick Start Archetype</name>
-    <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ft-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <!-- Druid 数据连接池依赖 -->
         <dependency>
             <groupId>com.alibaba</groupId>
