--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>footstones</artifactId>
+        <groupId>com.whw</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.whw</groupId>
     <artifactId>basic</artifactId>
@@ -20,6 +19,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>ft-support</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ft-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -51,6 +55,7 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.2.0</version>
         </dependency>
+
     </dependencies>
 
     <build>
