--- a/ft-support/pom.xml
+++ b/ft-support/pom.xml
@@ -5,11 +5,11 @@
         <groupId>com.whw</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
+
     <artifactId>ft-support</artifactId>
     <packaging>jar</packaging>
-    <name>Maven Quick Start Archetype</name>
-    <url>http://maven.apache.org</url>
+    <name>ft-support</name>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
