--- a/ft-common/pom.xml
+++ b/ft-common/pom.xml
@@ -1,15 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>footstones</artifactId>
         <groupId>com.whw</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.whw</groupId>
     <artifactId>ft-common</artifactId>
     <packaging>jar</packaging>
-    <name>Maven Quick Start Archetype</name>
-    <url>http://maven.apache.org</url>
+    <name>ft-common</name>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
