--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>footstones</artifactId>
         <groupId>com.whw</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>web</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>web</name>
     <packaging>jar</packaging>
+    <name>web</name>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -19,7 +19,12 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>ft-support</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ft-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,11 +42,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
