--- a/ft-api/pom.xml
+++ b/ft-api/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>footstones</artifactId>
         <groupId>com.whw</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ft-api</artifactId>
