--- a/ft-support/pom.xml
+++ b/ft-support/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>footstones</artifactId>
         <groupId>com.whw</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <groupId>com.whw</groupId>
