--- a/ft-api/pom.xml
+++ b/ft-api/pom.xml
@@ -5,6 +5,7 @@
         <groupId>com.whw</groupId>
         <version>1.0.1</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ft-api</artifactId>
     <packaging>jar</packaging>
@@ -12,10 +13,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ft-common</artifactId>
+            <version>${version}</version>
         </dependency>
     </dependencies>
 </project>
