--- a/ft-support/pom.xml
+++ b/ft-support/pom.xml
@@ -12,8 +12,22 @@
     <packaging>jar</packaging>
     <name>ft-support</name>
 
-    <dependencies>
+    <properties>
+        <java.version>1.8</java.version>
+        <version>1.0.1</version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ft-api</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ft-common</artifactId>
+            <version>${version}</version>
+        </dependency>
         <!-- Druid 数据连接池依赖 -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -24,7 +38,6 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
-
         <!-- MySQL 连接驱动依赖 -->
         <dependency>
             <groupId>mysql</groupId>
