--- a/pom.xml
+++ b/pom.xml
@@ -20,20 +20,27 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <fastjson>1.2.62</fastjson>
+        <lombok>1.16.8</lombok>
+        <swagger2>2.8.0</swagger2>
         <spring-cloud.version>Finchley.SR1</spring-cloud.version>
+        <spring-cloud-alibaba>0.2.2.RELEASE</spring-cloud-alibaba>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.62</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.8</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -46,6 +53,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
@@ -55,6 +66,17 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>1.2.0</version>
+            </dependency>
+            <!--mybatis plus依赖包-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>2.0.0</version>
             </dependency>
 
             <!-- MySQL 连接驱动依赖 -->
@@ -80,10 +102,32 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>0.2.2.RELEASE</version>
+                <version>${spring-cloud-alibaba}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok}</version>
+            </dependency>
+            <!-- 引入Swagger2的依赖 start -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger2}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger2}</version>
+            </dependency>
+            <!-- 引入Swagger2的依赖 end-->
 
         </dependencies>
 
@@ -124,6 +168,27 @@
             </plugins>
         </pluginManagement>
     </build>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>nexus</id>-->
+            <!--<name>songguo public nexus</name>-->
+            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/groups/public</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
+    <!--<distributionManagement>-->
+        <!--<repository>-->
+            <!--<id>ttyc-songguo7-releases</id>-->
+            <!--<name>Songguo Nexus Releases Repository</name>-->
+            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/repositories/releases/</url>-->
+        <!--</repository>-->
+
+        <!--<snapshotRepository>-->
+            <!--<id>ttyc-songguo7-snapshots</id>-->
+            <!--<name>Songguo Nexus Snapshots Repository</name>-->
+            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/repositories/snapshots/</url>-->
+        <!--</snapshotRepository>-->
+    <!--</distributionManagement>-->
+
     <modules>
         <module>web</module>
         <module>ft-support</module>
