--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,9 +18,10 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.whw</groupId>
             <artifactId>ft-support</artifactId>
-            <version>${version}</version>
+            <version>1.0.1</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
