--- a/ft-common/pom.xml
+++ b/ft-common/pom.xml
@@ -13,5 +13,9 @@
     <name>ft-common</name>
 
     <dependencies>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+        </dependency>
     </dependencies>
 </project>
