--- a/pom.xml
+++ b/pom.xml
@@ -268,26 +268,26 @@
             </plugins>
         </pluginManagement>
     </build>
-    <repositories>
-        <repository>
-            <id>nexus</id>
-            <name>songguo public nexus</name>
-            <url>http://maven.corp.songguo7.com:8360/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
-    <distributionManagement>
-        <repository>
-            <id>ttyc-songguo7-releases</id>
-            <name>Songguo Nexus Releases Repository</name>
-            <url>http://maven.corp.songguo7.com:8360/nexus/content/repositories/releases/</url>
-        </repository>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>nexus</id>-->
+            <!--<name>songguo public nexus</name>-->
+            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/groups/public</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
+    <!--<distributionManagement>-->
+        <!--<repository>-->
+            <!--<id>ttyc-songguo7-releases</id>-->
+            <!--<name>Songguo Nexus Releases Repository</name>-->
+            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/repositories/releases/</url>-->
+        <!--</repository>-->
 
-        <snapshotRepository>
-            <id>ttyc-songguo7-snapshots</id>
-            <name>Songguo Nexus Snapshots Repository</name>
-            <url>http://maven.corp.songguo7.com:8360/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
+        <!--<snapshotRepository>-->
+            <!--<id>ttyc-songguo7-snapshots</id>-->
+            <!--<name>Songguo Nexus Snapshots Repository</name>-->
+            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/repositories/snapshots/</url>-->
+        <!--</snapshotRepository>-->
+    <!--</distributionManagement>-->
 
     <modules>
         <module>web</module>
