--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,7 +18,7 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.whw</groupId>
             <artifactId>ft-support</artifactId>
             <version>1.0.1</version>
         </dependency>
