request&response 统一处理

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=9090
 server.servlet.context-path=/ft
 spring.profiles.active=mysql,sharding,redis
+logging.level.root=info
+logging.level.com.whw.footstones=debug
