--- a/web/pom.xml
+++ b/web/pom.xml
@@ -22,7 +22,17 @@
             <artifactId>ft-supports</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <!-- Spring Boot WebFlux -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
 
+        <!-- Reactor Core -->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
