任务-142349：竞争月报问题排查（缺陷-39079：竞争月报填报无法提交）

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=9090
+spring.profiles.active=local
 server.servlet.context-path=/ft
-spring.profiles.active=mysql,sharding,redis
+spring.profiles.include=mysql,sharding,redis
 logging.level.root=info
 logging.level.com.whw.footstones=debug
